vpisi me, registriraj me

--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -1,1 +1,74 @@
-<p>buy works!</p>
+<div class="products">
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/61UwGdoEAxL._AC_.jpg" alt="Vrtni palček z rdečo kapo">
+        <h3>Vrtni palček z rdečo kapo</h3>
+        <p>Ta čarobni vrtni palček ima rdečo kapo in belo brado. Zagotovo bo nasmejal vaš obraz in prinesel srečo vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://thumbs.dreamstime.com/b/portrait-smiling-garden-gnome-blue-hat-white-beard-yellow-jacket-front-black-background-head-funny-figurine-125876130.jpg" alt="Vrtni palček z modro kapo">
+        <h3>Vrtni palček z modro kapo</h3>
+        <p>Ta igriv vrtni palček ima modro kapo in belo brado. Je poln osebnosti in bo dodal malo čudaštva vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/419GprOxkZL._AC_SY580_.jpg" alt="Vrtni palček z zeleno kapo">
+        <h3>Vrtni palček z zeleno kapo</h3>
+        <p>Ta modri vrtni palček ima zeleno kapo in belo brado. Zagotovo bo prinesel modrost vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/61UwGdoEAxL._AC_.jpg" alt="Vrtni palček z rdečo kapo">
+        <h3>Vrtni palček z rdečo kapo</h3>
+        <p>Ta čarobni vrtni palček ima rdečo kapo in belo brado. Zagotovo bo nasmejal vaš obraz in prinesel srečo vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://thumbs.dreamstime.com/b/portrait-smiling-garden-gnome-blue-hat-white-beard-yellow-jacket-front-black-background-head-funny-figurine-125876130.jpg" alt="Vrtni palček z modro kapo">
+        <h3>Vrtni palček z modro kapo</h3>
+        <p>Ta igriv vrtni palček ima modro kapo in belo brado. Je poln osebnosti in bo dodal malo čudaštva vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/419GprOxkZL._AC_SY580_.jpg" alt="Vrtni palček z zeleno kapo">
+        <h3>Vrtni palček z zeleno kapo</h3>
+        <p>Ta modri vrtni palček ima zeleno kapo in belo brado. Zagotovo bo prinesel modrost vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/61UwGdoEAxL._AC_.jpg" alt="Vrtni palček z rdečo kapo">
+        <h3>Vrtni palček z rdečo kapo</h3>
+        <p>Ta čarobni vrtni palček ima rdečo kapo in belo brado. Zagotovo bo nasmejal vaš obraz in prinesel srečo vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://thumbs.dreamstime.com/b/portrait-smiling-garden-gnome-blue-hat-white-beard-yellow-jacket-front-black-background-head-funny-figurine-125876130.jpg" alt="Vrtni palček z modro kapo">
+        <h3>Vrtni palček z modro kapo</h3>
+        <p>Ta igriv vrtni palček ima modro kapo in belo brado. Je poln osebnosti in bo dodal malo čudaštva vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/419GprOxkZL._AC_SY580_.jpg" alt="Vrtni palček z zeleno kapo">
+        <h3>Vrtni palček z zeleno kapo</h3>
+        <p>Ta modri vrtni palček ima zeleno kapo in belo brado. Zagotovo bo prinesel modrost vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/61UwGdoEAxL._AC_.jpg" alt="Vrtni palček z rdečo kapo">
+        <h3>Vrtni palček z rdečo kapo</h3>
+        <p>Ta čarobni vrtni palček ima rdečo kapo in belo brado. Zagotovo bo nasmejal vaš obraz in prinesel srečo vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://thumbs.dreamstime.com/b/portrait-smiling-garden-gnome-blue-hat-white-beard-yellow-jacket-front-black-background-head-funny-figurine-125876130.jpg" alt="Vrtni palček z modro kapo">
+        <h3>Vrtni palček z modro kapo</h3>
+        <p>Ta igriv vrtni palček ima modro kapo in belo brado. Je poln osebnosti in bo dodal malo čudaštva vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+    <div class="product">
+        <img src="https://m.media-amazon.com/images/I/419GprOxkZL._AC_SY580_.jpg" alt="Vrtni palček z zeleno kapo">
+        <h3>Vrtni palček z zeleno kapo</h3>
+        <p>Ta modri vrtni palček ima zeleno kapo in belo brado. Zagotovo bo prinesel modrost vašemu vrtu.</p>
+        <button>Dodaj v košarico</button>
+    </div>
+</div>
