--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="hero">
     <h1>Dobrodošli na strani za vrtne palčke!</h1>
-    <p>Vrtni palčki so sladke mali figurice, ki se pogosto uporabljajo za okras v vrtovih. Verjame se, da prinašajo srečo v vrt in lastniku. Obstaja veliko različnih vrst vrtnih palčkov, vsak s svojim edinstvenim značajem in lastnostmi. Ali ste že izkušeni
-        vrtnar ali komaj začenjate? Vrtni palček je popolna dodatek kateremu koli zunanjemu prostoru.</p>
+    <p>Vrtni palčki so sladke male figurice, ki se pogosto uporabljajo za okras v vrtovih. Verjame se, da prinašajo srečo v vrt in lastniku. Obstaja veliko različnih vrst vrtnih palčkov, vsak s svojim edinstvenim značajem in lastnostmi. Ali ste že izkušeni
+        vrtnar ali komaj začenjate? Vrtni palček je popolni dodatek kateremu koli zunanjemu prostoru.</p>
 </div>
 
 <div class="products">
@@ -24,4 +24,5 @@
         <p>Ta modri vrtni palček ima zeleno kapo in belo brado. Zagotovo bo prinesel modrost vašemu vrtu.</p>
         <button>Dodaj v košarico</button>
     </div>
+
 </div>
