--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div class="login">
+    <div class="container">
+        <h1>Vpis</h1>
+        <form>
+            <label for="email">E-pošta:</label><br />
+            <input type="email" id="email" name="email" /><br />
+            <label for="password">Geslo:</label><br />
+            <input type="password" id="password" name="password" /><br /><br />
+            <button type="submit">Vpiši me</button>
+        </form>
+    </div>
+</div>
