--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,14 @@
-<p>register works!</p>
+<div class="register">
+    <div class="container">
+        <h1>Registracija</h1>
+        <form>
+            <label for="username">Uporabniško ime</label><br />
+            <input type="text" id="username" name="username" /><br />
+            <label for="email">E-pošta:</label><br />
+            <input type="email" id="email" name="email" /><br />
+            <label for="password">Geslo:</label><br />
+            <input type="password" id="password" name="password" /><br /><br />
+            <button type="submit">Registriraj me</button>
+        </form>
+    </div>
+</div>
